--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ h1{
 .contenitore-piccolo{
   max-width:1000px;
   width: 700px;
-  height: 740px;
+  background-color: cadetblue;
   
 }
 .scelta{
@@ -242,6 +242,10 @@ font-weight: 700;
   
  }
 
+ hr{
+  width: 40px;
+ }
+
  /* piani business */
  .enterprise{
   margin-top: 20px;
@@ -267,4 +271,48 @@ font-weight: 700;
 
 .btn.vendite{
   padding: 7px 20px;
+}
+
+/* partner */
+.partner{
+  margin-top:90px;
+}
+
+.contenuto-partner{
+  display: flex;
+  justify-content: space-between;
+
+}
+.immagine-partner {
+  width: 60%;
+ 
+}
+.contenuto-partner div img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.testo-partner{
+  width: 40%;
+  margin: 40px 30px 0 30px;
+  
+}
+.testo-partner div{
+  margin-bottom: 30px;
+  font-size: .7rem;
+  font-weight: 500;
+}
+
+.btn-partner{
+  border: 1px solid black;
+  margin-top: 40px;
+  font-size: .7rem;
+  font-weight: 500;
+  padding: 7px;
+}
+
+/* partner  */
+
+.esegui{
+  margin-top: 90px;
 }
