--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ h1{
 .contenitore-piccolo{
   max-width:1000px;
   width: 750px;
-  /* background-color: cadetblue; */
+  background-color: cadetblue;
   
 }
 .scelta{
@@ -342,3 +342,16 @@ h2{
   font-weight: 500;
 }
 /* esegui  */
+
+/* 500.000 team  */
+.team{
+  margin-top: 120px;
+}
+.contenuto-team h2{
+  width:70%;
+  margin-bottom: 25px;
+}
+.contenuto-team a{
+  font-size: .7rem;
+}
+/* 500.000 team  */
