--- a/css/style.css
+++ b/css/style.css
@@ -355,3 +355,57 @@ h2{
   font-size: .7rem;
 }
 /* 500.000 team  */
+
+/* disignit */
+.contenitore-pagina{
+  width: 100vw;
+  background-color: aqua;
+  height: 500px;
+  margin-top: 90px;
+  display: flex;
+}
+.quadrati-contenitori{
+  width: calc(100% / 3);
+  background-color: blueviolet;
+  border: 1px solid black;
+}
+
+.quadrati-contenitori.brand{
+  display: flex;
+  height: 400px;
+  flex-wrap: wrap;
+
+}
+.quadrati-contenitori.brand div{
+  display: flex;
+  height: 50%;
+  width: 50%;
+  min-width: 100px;
+  min-height: 100px;
+  
+}
+.quadrati-contenitori.brand div img{
+
+ width: 100%;
+ height: 100%;
+ padding: 40px;
+ filter: invert(98%);
+
+}
+.designit{
+  background-color: rgb(162,211,155);
+
+}
+.asu{
+  background-color: rgb(97,8,43);
+}
+.uf{
+  background-color:rgb(0,147,206) ;
+}
+.topps{
+  background-color:rgb(255,28,28) ;
+}
+.florida{
+  object-fit: contain;
+}
+
