--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ ul{
 .contenitore-medio{
   max-width:1100px;
   width: 800px;
-  height: 520px;
+  /* height: 520px; */
  
 }
 
@@ -357,7 +357,7 @@ h2{
 /* 500.000 team  */
 /* disignit */
 .contenitore-pagina{
-  width: 100vw;
+  width: 100%;
   background-color: aqua;
   height: 400px;
   margin-top: 90px;
@@ -497,3 +497,36 @@ h2{
 }
 
 /* domande  */
+
+/* footer */
+
+.footer-top{
+  display: flex;
+  justify-content: center;
+  background-color: black;
+  padding: 70px 0;
+}
+.lista nav ul li{
+  font-size: .7rem;
+  line-height: 25px;
+}
+.footer-top .contenitore-medio{
+  display: flex;
+  color: white;
+  justify-content: space-between;
+
+}
+.footer-bottom{
+  display: flex;
+  justify-content: center;
+  background-color: black;
+  color:rgb(153,153,153);
+  font-size: .7rem;
+}
+.lingua{
+  padding: 40px 0;
+  border-top: 1px solid white;
+  width: 90px;
+}
+
+
